--- a/src/app/root.less
+++ b/src/app/root.less
@@ -20,6 +20,8 @@
     --app-border-color: rgb(51, 51, 51);
     --app-bg-color: rgba(21, 23, 21, 1);
     --app-bg-color-dev: rgba(21, 23, 48, 1);
+    --app-maincontent-bg-color: #333;
+    --app-border-radius: 10px;
 
     // global generic colors
     --app-black: rgb(0, 0, 0);
