--- a/src/app/workspace/workspace.less
+++ b/src/app/workspace/workspace.less
@@ -8,8 +8,7 @@
     &.is-hidden {
         display: none;
     }
-    border-radius: 10px;
-    border-radius: 0 0 6px 6px;
+    border-radius: 0 var(--app-border-radius) var(--app-border-radius) var(--app-border-radius);
     border-bottom: 1px solid var(--app-border-color);
     border-right: 1px solid var(--app-border-color);
     border-left: 1px solid var(--app-border-color);
